<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">marketMATE</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="near_by">Near by</string>
    <string name="top_rate">Top Rate</string>
    <string name="top_follow">Top Follow</string>
    <string name="re_cent">Recents</string>
    <string name="top_view">Top View</string>
    <string name="all_category">All Category</string>
    <string name="topmenu_guest">GUEST</string>
    <string name="topmenu_inbox">Inbox</string>
    <string name="topmenu_follows">Follows</string>
    <string name="topmenu_product">Product</string>
    <string name="topmenu_login">LOG IN</string>
    <string name="topmenu_signup">SIGNUP</string>
    <string name="topmenu_contact_us">CONTACT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="keep_me_login">Keep me login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="call_us">Call us</string>
    <string name="send_mail">Send mail</string>
    <string name="go_to_website">Go to website</string>
    <string name="free_account">Free account</string>
    <string name="premium_account">Premium account</string>
    <string name="email">Email</string>
    <string name="personal_info">Personal Info</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="address">Address</string>
    <string name="add_avatar">Add Avatar</string>
    <string name="hi_tech">Hi Tech</string>
    <string name="healthy">Healthy</string>
    <string name="foodin">Foods</string>
    <string name="fashion">Fashion</string>
    <string name="furniture">Furniture</string>
    <string name="for_kid">For Kid</string>
    <string name="entertainment">Entertainment</string>
    <string name="electronic">Electronics</string>
    <string name="computer">Computer</string>
    <string name="car">Car</string>
    <string name="camera">Camera</string>
    <string name="art_craft">Art Craft</string>
    <string name="spa">Spa</string>
    <string name="stationery">Stationery</string>
    <string name="mobile">Mobile</string>
    <string name="top_suppliers">TOP SUPPLIERS</string>
    <string name="guest">GUEST</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="contact_us">CONTACT US</string>
    <string name="note">NOTE:</string>
    <string name="notice">Select your favourite group for\nconvenient in display category &amp; push\nnotifications.\n\n(Skip for auto select)</string>
    <string name="skip">Skip</string>
    <string name="ok">OK</string>
    <string name="checkbox">Recieve notifications from us</string>
    <string name="account_settings">Account Settings</string>
    <string name="upgrade_account">Upgrade Account</string>
    <string name="edit_password">Edit Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Retype-Password</string>
    <string name="post">Post</string>
    <string name="add_pictures">Add Pictures</string>
    <string name="video">Video</string>
    <string name="price">Price</string>
    <string name="my_box">My box</string>
    <string name="User">User</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="sort">Sort</string>
    <string name="favourite">Favourite</string>
    <string name="my_post">My Post</string>
    <string name="expired_post">Expired Post</string>
    <string name="pink_telephone">Pink Telephone</string>
    <string name="owner_lionel">Owner : Lionel</string>
    <string name="very_good">Very Good</string>
    <string name="details">Details</string>
    <string name="contact_usa">Contact</string>
    <string name="share">Share</string>
    <string name="follow">Follow Poster</string>
    <string name="bmw">BMW</string>
    <string name="price_number">120.000 USD</string>
    <string name="map">Map</string>
    <string name="good">Good</string>
    <string name="bmw_sell">Need Sell BMW X5</string>
    <string name="day">01 Oct, 2013</string>
    <string name="expire">Expire: 1 day</string>
    <string name="mac">Mac</string>
    <string name="adress">123 Pasture St, Ward 01, Dist 1, HCMC..</string>
    <string name="mail_address">mac.unt@gmail.com</string>
    <string name="phone_number">(+84) 937 937 195.</string>
    <string name="phone">Phone</string>
    <string name="description">Description...</string>
    <string name="sample_number">323</string>
    <string name="sample_number_comment">123</string>
    <string name="sample_price">200.000 VND</string>
    <string name="comment">Comment</string>
     <string name="link">www.deptrai.com</string>
      <string name="demo_text">Demo text for description. Demo text for de-\nscription. Demo text for description.Demo\ntext for description...</string>
	
    <string name="comment_detail">COMMENT</string>
    <string name="home_page">Home page</string>
    <string name="detail_page">Details page</string>
    <string name="mybox_page">Mybox page</string>
    <string name="list_page">List page</string>
    <string name="account_page">Account setting page</string>
      <string name="post_page">Post page</string>
      <string name="signup_step">Signup-step</string>
      <string name="list">List</string>
      
    <string-array name="category">
        <item>Category</item>
        <item>Electronic</item>
        <item>Fashion</item>
        <item>Spa</item>
    </string-array>
    <string-array name="product_type">
        <item>Product Type</item>
        <item>Electronic</item>
        <item>Fashion</item>
        <item>Spa</item>
    </string-array>
    <string-array name="currentcy">
        <item>Currentcy</item>
        <item>Việt Nam</item>
        <item>Lào</item>
        <item>Campuchia</item>
    </string-array>
    <string-array name="Country">
        <item>Country</item>
        <item>Việt Nam</item>
        <item>Lào</item>
        <item>Campuchia</item>
    </string-array>
    <string-array name="City">
        <item>City</item>
        <item>Tp.Hồ Chí Minh</item>
        <item>Viêng Chăm</item>
        <item>Campuchia</item>
    </string-array>
    <string-array name="District">
        <item>District</item>
        <item>Thủ Đức</item>
        <item>Quận 1</item>
        <item>Quận 9</item>
    </string-array>

    <string name="Address">Address</string>

</resources>