<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="@drawable/bg_loginpage"
    android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="50dp"
            android:padding="8dp"
            android:singleLine="true"
            android:hint="@string/username"
            android:background="@drawable/bg_edittext_username" />
        
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            android:padding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/bg_edittext_username" />
        
        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn_login" />
        
        <ImageView
            android:id="@+id/btn_facebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/button_facebook"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name" />
        
        <ImageView
            android:id="@+id/btn_twitter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/button_twitter"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name" />
	    
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <ImageView
                android:id="@+id/img_texture"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="-10dp"
	            android:src="@drawable/texture"
	            android:contentDescription="@string/app_name"
	            android:layout_alignParentBottom="true" />
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/bg_topmenu_normal"
                android:layout_alignParentBottom="true" >
                <CheckBox
                    android:id="@+id/keep_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keep_me_login"
                    android:textColor="@color/white"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_alignParentLeft="true" />
                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>
        </RelativeLayout>

</LinearLayout>